@@ -1,5 +1,10 @@
 2008-11-06  Alan McGovern  <amcgovern@novell.com>
 
+	* minizip/minizip/miniunz.c :
+	* Makefile.am: Removed unnecessary file from build and svn.
+
+2008-11-06  Alan McGovern  <amcgovern@novell.com>
+
 	* minizip/*.am :
 	* Makefile.am: Merged minizip build into the support code.
 
